<resources>
    <string name="app_name">Event App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="subtitle_top_nav_view">Event yang dibuat</string>
    <string name="subtitle_bot_nav_view">Event yang diikuti</string>
    <string name="setelan">Setelan</string>
    <string name="help">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create">Create</string>
    <string name="menu">Menu</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="ruangan">Ruangan</string>
    <string name="alamat">Alamat</string>
    <string name="maps">Maps</string>
    <string name="s_d">s/d</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="peserta">Peserta</string>
    <string name="berkas">Berkas</string>
    <string name="lorem">To add a collapsing toolbar to your layout, place the CollapsingToolbarLayout inside an AppBarLayout. Then, add a Toolbar and any other views as a child to the CollapsingToolbarLayout. Make sure that the entire view structure is inside a CoordinatorLayout to take advantage of CollapsingToolbarLayout’s scrolling and features.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="check">Check</string>
    <string name="buat">Buat</string>
    <string name="selesai">Selesai</string>
    <string name="registrasi">Registrasi ?</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="error_message">Silahkan Isi</string>
    <string name="success_message">Data berhasil disimpan</string>
    <string name="failed_message">Data gagal disimpan</string>
    <string name="gedung">Gedung</string>
</resources>
